0.1614
  fixed Carp Carp trust relationship
0.1613
  added experimental register_method() method
  added experimental methods attribute
0.1612
  added tests
  updated document
  removed DBIx::Custom::SQLite last_insert_rawid() mehtod(not backword compatible)
  removed DBIx::Custom::MySQL last_insert_id() method(not backword compatible)
0.1611
  renamed update tag to update_param
  renamed insert tag to insert_param
  renamed sql_builder to query_builder
0.1610
  added filter_check attribute.
0.1609
  updated document.
0.1608
  update document
  renamed DBIx::Custom::QueryBuilder::TagProcessors functions(not backword compatible)
0.1607
  where argument of select() method can specify array(string, paramters)
  renamed build_query() to create_query()(not backword compatible)
0.1606
  fix testing bug
0.1605
  remove DBIx::Custom::QueryBuilder::tag_syntax()  (not backword compatible)
  renamed DBIx::Custom::TagProcessor to DBIx::Custom::TagProcessors (not backword compatible)
  changed arguments of tag processor(not backword compatible)
  renamed DBIx::Custom::QueryBuilder::TagProcessors functions(not backword compatible)
0.1604
  changed argument of tag processor(not backword compatible)
  renamed default_query_filter to default_bind_filter(not backword compatible)
  renamed DBIx::Custom::SQLTemplate to DBIx::Custom::SQLBuilder(not backword compatible)
  renamed create_query to build_query(not backword compatible)
  renamed sql_template to sql_builder(not backword compatible)
  removed DESTROY method(not backword compatible)
  removed disconnect method(not backword compatible)
  fixed DBIx::Custom::MySQL connect_memory
0.1603
  removed DBIx::Custom commit method (not backword compatible)
  removed DBIx::Custom rollback method (not backword compatible)
  removed DBIx::Custom auto_commit method (not backword compatible)
0.1602
  added cache_method attribute
0.1601
  added cache attribute